[build-system]
requires = [
  "setuptools >= 42",
  "wheel",
  "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "voltcraft/_version.py"
version_scheme = "post-release"

[tool.mypy]
ignore_missing_imports = true
strict = true
python_version = "3.8"

[tool.black]
target-version = ["py38"]
