[build-system]
requires = [
  "setuptools >= 68.1",
  "wheel",
  "setuptools_scm >= 8",
]
build-backend = "setuptools.build_meta"

[project]
name = "voltcraft"
license.file = "LICENSE.md"
description = "library for controlling Voltcraft PPS power supplies"
authors = [
    {name = "Andreas Poehlmann", email = "andreas@poehlmann.io"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = ["pyserial"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ap--/voltcraft.git"
Download = "https://github.com/ap--/voltcraft"
Source = "https://github.com/ap--/voltcraft"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
write_to = "voltcraft/_version.py"
version_scheme = "post-release"

[tool.mypy]
ignore_missing_imports = true
strict = true
python_version = "3.8"

[tool.black]
target-version = ["py38"]

