[metadata]
name = voltcraft
url = https://github.com/ap--/voltcraft.git
download_url = https://github.com/ap--/voltcraft
license = MIT
license_files =
    LICENSE.md
description = library for controlling Voltcraft PPS power supplies
long_description = file: README.md
long_description_content_type = text/markdown
author = Andreas Poehlmann
author_email = andreas@poehlmann.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
install_requires =
    pyserial
python_requires = >=3.8

[bdist_wheel]
universal=1

[flake8]
max-line-length = 88
